--- a/views/footer.html
+++ b/views/footer.html
@@ -11,7 +11,14 @@
         <a class="c-footer__logo" target="_blank" href="http://apostrophecms.org">
           {{ svgs.apostropheLogo() }}
         </a>
-        This is the <a target="_blank" class="c-footer__apostrophe-link" href="http://apostrophecms.org">ApostropheCMS</a> Demo site
+       <a><h2>Nuestras redes sociales: </h2></a>
+        <font size="100px"><a target="_blank" class="c-footer__apostrophe-link" href="https://es-la.facebook.com/museoarqueologico.eliecersilvacelis/"><i class="fa fa-whatsapp"></i></a></font>
+        <font size="100px"><a target="_blank" class="c-footer__apostrophe-link" href="https://www.facebook.com/alcaldiaiza/"><i class="fa fa-facebook"></i></a></font>
+        <font size="100px"><a target="_blank" class="c-footer__apostrophe-link" href="#"><i class="fa fa-twitter"></i></a></font>
+        <font size="100px"><a target="_blank" class="c-footer__apostrophe-link" href="https://www.youtube.com/channel/UCVcp7FTHaS5uGiYoEAo2itA/featured"><i class="fa fa-youtube"></i></a></font>
+        <font size="100px"><a target="_blank" class="c-footer__apostrophe-link" href="#"><i class="fa fa-instagram"></i></a></font>
+        <a><h2>Derechos Reservados: </h2></a>
+        <a><h3>Bryant Alfonso Moncada </h3></a>
         <a ><div id="google_translate_element"></div></a>
       </div>
     </div>
