--- a/lib/modules/apostrophe-search/views/empty.html
+++ b/lib/modules/apostrophe-search/views/empty.html
@@ -16,10 +16,10 @@
     </div>
     <div class="o-container o-container--medium c-search-page__content">
       {{ breadcrumbs.render(data.page) }}
-      <h1 class="o-title c-search-page__title">Search all content</h1>
+      <h1 class="o-title c-search-page__title">Buscar todo el contenido:</h1>
       {{ searchbar.render() }}
       <div class="c-search-page__suggested">
-        <p class="o-body c-search-page__suggested-text">Here are some useful pages you might be looking for:</p>
+        <p class="o-body c-search-page__suggested-text">Aquí hay algunas páginas útiles que podría estar buscando:</p>
         {{ apos.singleton(page, 'suggestedLinks', 'link', {}) }}
       </div>
     </div>
