--- a/views/macros/filters/submit.html
+++ b/views/macros/filters/submit.html
@@ -1,3 +1,3 @@
 {% macro render() %}
-  <input class="o-button o-button--large c-filters__submit" type="submit" value="Apply Filters" />
+  <input class="o-button o-button--large c-filters__submit" type="submit" value="Aplicar filtro" />
 {% endmacro %}
