--- a/views/macros/filters/tag-picker.html
+++ b/views/macros/filters/tag-picker.html
@@ -2,7 +2,7 @@
 
 {% macro render(tags) %}
   <div class="o-field-container o-field-container--tags">
-    <label for="tag" class="o-field-label">Filter by Tags</label>
+    <label for="tag" class="o-field-label">Filtrar por etiquetas</label>
     <select multiple class="o-field-input o-field-input--tag" name="tags" id="tags" data-unfocus-submit>
       <option value=""></option>
       {% for tag in tags %}
