--- a/views/macros/searchbar.html
+++ b/views/macros/searchbar.html
@@ -3,11 +3,11 @@
 {% macro render(value=undefined) %}
   <div class="c-searchbar">
     <form>
-      <label class="c-searchbar__label" for="search">Search the Site</label>
+      <label class="c-searchbar__label" for="search">Buscar el sitio</label>
       <div class="c-searchbar__icon">
         {{ svgs.search() }}
       </div>
-      <input type="text" placeholder="Search" name="search" id="search" {% if value %}value="{{ value }}"{% endif %} class="o-body c-searchbar__input">
+      <input type="text" placeholder="Buscar" name="search" id="search" {% if value %}value="{{ value }}"{% endif %} class="o-body c-searchbar__input">
     </form>
   </div>
 {% endmacro %}
