--- a/views/demo/notification.html
+++ b/views/demo/notification.html
@@ -4,18 +4,18 @@
     <button class="c-demo-notification__close" data-demo-notification-toggle>←</button>
     <div class="c-demo-notification__container">
       <div class="c-demo-notification__content">
-        <h5 class="c-demo-notification__headline">You’re demoing ApostropheCMS!</h5>
+        <h5 class="c-demo-notification__headline">¡Está probando ApostropheCMS!</h5>
         <p class="c-demo-notification__body">
-          Welcome to an ApostropheCMS editing experience! We hope that you are finding your way around the editing experience with
-          ease. If you would like to learn more about our commercial solutions and our <a
-            href="https://apostrophecms.com/assembly">B2B website builder</a> platform, <a
-            href="https://apostrophecms.com/contact-us">contact us</a> today! If you are a developer and want to start your own project,
-          here’s how to <a href="https://docs.apostrophecms.org/getting-started/setting-up-your-environment.html">Get Started</a>
-          with access to <a href="https://github.com/apostrophecms">Apostrophe on GitHub</a>.
+          ¡Bienvenido a una experiencia de edición de ApostropheCMS! Esperamos que encuentre su camino en la experiencia de edición con
+          facilidad. Si desea conocer más sobre nuestras soluciones comerciales y nuestro <a
+            href="https://apostrophecms.com/assembly">Creador de sitios web B2B</a> Plataforma, <a
+            href="https://apostrophecms.com/contact-us">Contactenos</a> ¡hoy dia! Si eres desarrollador y quieres iniciar tu propio proyecto,
+          aquí es cómo <a href="https://docs.apostrophecms.org/getting-started/setting-up-your-environment.html">Empezando</a>
+          con acceso a <a href="https://github.com/apostrophecms">Apostrophe en GitHub</a>.
         </p>
       </div>
       <div class="c-demo-notification__button">
-        <a href="https://apostrophecms.com/contact-us" target="_blank">Get in touch</a>
+        <a href="https://apostrophecms.com/contact-us" target="_blank">Ponerse en contacto</a>
       </div>
     </div>
   </div>
