--- a/lib/modules/artworks-pages/views/show.html
+++ b/lib/modules/artworks-pages/views/show.html
@@ -48,7 +48,7 @@
         data-item-price="{{artist.nationality}}"
         data-item-url="{{artist._url}}"
         data-item-description="{{ artist.description }}"
-        data-item-image="{{imgUrl}}"
+        data-item-image="{{artist.lifetime}}"
         data-item-name="{{artist.title}}">
   Agregar al carrito
 </button>
