--- a/lib/modules/artists-pages/views/show.html
+++ b/lib/modules/artists-pages/views/show.html
@@ -32,4 +32,14 @@
       {{ apos.area(piece, 'extra', { widgets: apos.helpers.baseWidgets }) }}
     </div>
   </main>
+  <div id="disqus_thread"></div>
+<script>
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://probando-5.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endblock %}
